# perpetuum-comparer

./: .gitignore  README.md  pyproject.toml
perpetuum_comparer/: commander.py  comparer.py  duck_comparer.py  utils.py
test_files/: docA.csv  docB.csv  docX.csv  test_20250904220353.csv  test_20250929221123.csv
tests/unit/: test_comparer_module.py  test_utils.py
