[tool.poetry]
name = "perpetuum-comparer"
version = "0.1.0"
description = "Small Command-line tool for data comparisons"
authors = ["DragosPet <iuliandragospet@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "perpetuum_comparer"}]

[tool.poetry.dependencies]
python = ">3.12"
pandas = "^2.0.2"
tabulate = "^0.9.0"
termcolor = "^2.4.0"
ConfigArgParse = "^1.7"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
p-compare = "perpetuum_comparer.commander:main"
